# gemini-cli-mcp

./: .env.example  Cargo.toml  README.md  USAGE.md
src/: main.rs
